Kinda fixed white space its filled but extra space on side

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -117,9 +117,14 @@ video
 
 html
 {
-	height: 100%;  
+	width: 100%;
+    height: 100%;
+    
+    padding: 0px;
+    overflow-x: hidden;   
 	background-color: white;
 }
+
 
 .divider
 {
@@ -369,7 +374,9 @@ hr {
 
 body
 {
-
+	
+	x-overflow:hidden;
+	margin-right: -25px;
 	background-color: $theme-off-white;
 }
 
